# PAD_MultiAgentAnalysis_MCP

./: .env  README.md  main.py  pyproject.toml  requirements.txt
agents/: activity_analyzer.py  breach_judge.py  policy_expert.py
chunking/: chunk_pdf.py
frontend/: index.html
mcp_server/: server.py
prompts/: activity_prompt.txt  breach_prompt.txt
retriever/: policy_retriever.py
